--- a/Frontend/views/employee-registration.html
+++ b/Frontend/views/employee-registration.html
@@ -396,7 +396,7 @@
                                                 onclick="clearForm()">
                                                 <i class="fas fa-times me-1"></i> Clear
                                             </button>
-                                            <button type="button"
+                                            <button type="button" id="btnEmployeeList"
                                                 class="btn btn-success btn-sm flex-grow-1 py-1 shadow-sm"
                                                 onclick="location.href='employee-list.html'">
                                                 <i class="fas fa-list me-1"></i> List
@@ -545,7 +545,7 @@
                             <i class="fas fa-lock"></i> Access Controls
                         </div>
                         <div class="card-body">
-                            <div class="checkbox-container">
+                            <div class="checkbox-container" id="accessControlsSection">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" id="allowOvertime" checked>
                                     <label class="form-check-label" for="allowOvertime">Allow Overtime</label>
