--- a/Frontend/views/attendance-list.html
+++ b/Frontend/views/attendance-list.html
@@ -72,11 +72,7 @@
         }
 
         .col-code {
-            width: 55px;
-        }
-
-        .col-action {
-            width: 50px;
+            width: 100px;
         }
 
         .col-name {
@@ -92,23 +88,30 @@
         }
 
         .col-duty {
-            width: 55px;
+            width: 80px;
         }
 
-        .col-time {
-            width: 95px;
+        .col-checkin,
+        .col-checkout,
+        .col-breakout,
+        .col-breakin {
+            width: 90px;
+        }
+
+        .col-worked,
+        .col-breakhrs,
+        .col-totaldiff,
+        .col-totalhrs {
+            width: 70px;
         }
 
         .col-diff-btns {
             width: 45px;
         }
 
-        .col-diff-box {
-            width: 100px;
-        }
-
-        .col-hrs {
-            width: 75px;
+        .col-diffin,
+        .col-diffout {
+            width: 80px;
         }
 
         /* Screen Header Grid with Side Borders */
@@ -259,34 +262,57 @@
             border-color: #0076cc;
         }
 
-        .row-present td {
-            background-color: #008000 !important;
-            color: white !important;
-            font-weight: bold !important;
+        .row-completed td {
+            background-color: #28a745 !important;
+            /* Darker Green (Bootstrap Success) */
+            color: #ffffff !important;
+        }
+
+        .row-partial td {
+            background-color: #e2ec7a !important;
+            /* Yellow */
+            color: black !important;
         }
 
         .row-absent td {
-            background-color: #CD1C18 !important;
+            background-color: #f8d7da !important;
+            /* Red */
+            color: #721c24 !important;
+        }
+
+        .row-overtime td {
+            background-color: #9d8df1 !important;
+            /* Purple */
             color: white !important;
-            font-weight: bold !important;
+        }
+
+        .row-warning td {
+            background-color: #fd7e14 !important;
+            /* Orange Warning */
+            color: white !important;
         }
 
         .row-leave td {
-            background-color: #fb6340 !important;
-            color: white !important;
-            font-weight: bold !important;
+            background-color: #fff3cd !important;
+            /* Yellow-Orange */
+            color: #856404 !important;
         }
 
-        .row-present input,
-        .row-present select,
+        .row-completed input,
+        .row-completed select,
+        .row-partial input,
+        .row-partial select,
         .row-absent input,
         .row-absent select,
+        .row-overtime input,
+        .row-overtime select,
+        .row-warning input,
+        .row-warning select,
         .row-leave input,
         .row-leave select {
-            background-color: rgba(255, 255, 255, 0.2) !important;
-            color: white !important;
-            font-weight: bold !important;
-            border: 1px solid rgba(255, 255, 255, 0.4) !important;
+            background-color: white !important;
+            color: black !important;
+            border: 1px solid #ced4da !important;
         }
 
         /* Ensure dropdown options are visible (black text) */
@@ -296,22 +322,30 @@
             font-weight: normal !important;
         }
 
-        .row-present a {
+        .row-completed a,
+        .row-overtime a,
+        .row-warning a {
             color: #ffffff !important;
             font-weight: bold !important;
             text-decoration: none;
         }
 
         /* Lighter buttons for visibility on dark rows */
-        .row-present .btn-success,
+        .row-completed .btn-success,
+        .row-partial .btn-success,
         .row-absent .btn-success,
+        .row-overtime .btn-success,
+        .row-warning .btn-success,
         .row-leave .btn-success {
             background-color: #51cf66 !important;
             border-color: #51cf66 !important;
         }
 
-        .row-present .btn-danger,
+        .row-completed .btn-danger,
+        .row-partial .btn-danger,
         .row-absent .btn-danger,
+        .row-overtime .btn-danger,
+        .row-warning .btn-danger,
         .row-leave .btn-danger {
             background-color: #ff6b6b !important;
             border-color: #ff6b6b !important;
@@ -570,7 +604,7 @@
                     style="width: 130px; font-size: 0.75rem;">
 
                 <select id="filterBranch" class="form-select form-select-sm" style="width: 130px; font-size: 0.75rem;">
-                    <option value="">(PWD-1)</option>
+                    <option value="">Select Branch</option>
                 </select>
 
                 <select id="filterDept" class="form-select form-select-sm" style="width: 140px; font-size: 0.75rem;">
@@ -581,16 +615,18 @@
                     <option value="">Select Designation</option>
                 </select>
 
-                <select id="filterStatus" class="form-select form-select-sm" style="width: 120px; font-size: 0.75rem;">
+                <select id="filterStatus" class="form-select form-select-sm" style="width: 150px; font-size: 0.75rem;">
                     <option value="">All Attendance</option>
-                    <option value="Present">Present</option>
-                    <option value="Absent">Absent</option>
+                    <option value="less_1hr">Less then 1 Hrs</option>
+                    <option value="greater_17hr">Greater then 17 Hrs</option>
+                    <option value="no_checkinout">No Check In-Out</option>
+                    <option value="checkin_no_out">CheckIn but No Out</option>
                 </select>
 
                 <button class="btn btn-success btn-sm px-2" style="font-size: 0.75rem;"
                     onclick="loadAttendanceList()"><i class="fas fa-search"></i> Search</button>
-                <button class="btn btn-secondary btn-sm px-2" style="font-size: 0.75rem;" onclick="handlePrint()"><i
-                        class="fas fa-print"></i>
+                <button class="btn btn-info btn-sm px-2 text-white" style="font-size: 0.75rem;"
+                    onclick="handlePrint()"><i class="fas fa-print"></i>
                     Print</button>
                 <button class="btn btn-danger btn-sm px-2" style="font-size: 0.75rem;">Import Multiple
                     Attendance</button>
@@ -612,24 +648,23 @@
                     <tr>
                         <th class="col-sr" style="width: 30px;">SrNo</th>
                         <th class="col-date" style="width: 70px;">Date</th>
-                        <th class="col-code" style="width: 40px;">Code</th>
-                        <th class="col-action" style="width: 60px;">Save</th>
+                        <th class="col-code" style="width: 100px;">Code</th>
                         <th class="col-name" style="width: 140px;">Name</th>
-                        <th class="col-dept" style="width: 100px;">Dept</th>
-                        <th class="col-desig" style="width: 100px;">Desig</th>
-                        <th class="col-duty" style="width: 40px;">Duty</th>
-                        <th class="col-checkin" style="width: 60px;">Check In</th>
-                        <th class="col-checkout" style="width: 60px;">Check Out</th>
-                        <th class="col-worked" style="width: 50px;">Worked</th>
-                        <th class="col-breakout" style="width: 60px;">Brk Out</th>
-                        <th class="col-breakin" style="width: 60px;">Brk In</th>
-                        <th class="col-breakhrs" style="width: 50px;">Brk Hrs</th>
-                        <th class="col-diff" style="width: 40px;">Diff</th>
-                        <th class="col-diffin" style="width: 60px;">Diff In</th>
-                        <th class="col-diffout" style="width: 60px;">Diff Out</th>
-                        <th class="col-totaldiff" style="width: 50px;">Tot Diff</th>
-                        <th class="col-totalhrs" style="width: 50px;">Tot Hrs</th>
-                        <th class="col-status" style="width: 50px;">Status</th>
+                        <th class="col-dept" style="width: 100px;">Department</th>
+                        <th class="col-desig" style="width: 100px;">Designation</th>
+                        <th class="col-duty" style="width: 60px;">Duty Hours</th>
+                        <th class="col-checkin" style="width: 80px;">Check_In</th>
+                        <th class="col-checkout" style="width: 80px;">Check_Out</th>
+                        <th class="col-worked" style="width: 70px;">Worked_Hrs</th>
+                        <th class="col-breakout" style="width: 80px;">Break_Out</th>
+                        <th class="col-breakin" style="width: 80px;">Break_In</th>
+                        <th class="col-breakhrs" style="width: 60px;">Break_Hrs</th>
+                        <th class="col-diff" style="width: 40px;">+ -</th>
+                        <th class="col-diffin" style="width: 70px;">Time Diff In</th>
+                        <th class="col-diffout" style="width: 70px;">Time Diff Out</th>
+                        <th class="col-totaldiff" style="width: 60px;">Tot Diff</th>
+                        <th class="col-totalhrs" style="width: 60px;">Tot Hrs</th>
+                        <th class="col-status" style="width: 80px;">Status</th>
                     </tr>
                 </thead>
                 <tbody id="attendanceRecordsBody">
